--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rgb_color_picker
 description: A new Flutter package.
 version: 0.0.1
-author:
+author: Abdulrhman Ahmed
 homepage:
 
 environment:
